# RecStore

./: CMakeLists.txt  recstore_config.json  recstore_config_generator.py
dockerfiles/: init_env_inside_docker.sh
src/: CMakeLists.txt
src/base/: CMakeLists.txt  lf_list.h
src/framework/: op.h
src/framework/pytorch/: CMakeLists.txt
src/grpc_ps/: grpc_ps_client.cpp
src/ps/: CMakeLists.txt  cache_ps_impl.h  grpc_ps_client.cpp  grpc_ps_client.h  grpc_ps_client_python.cpp  grpc_ps_server_async.cpp  python_cpp_test.cpp
src/ps/proto/: ps.proto
src/ps/python_client/: cache_policy.py  client.py  criteo_loader.py  loadGenerator.py  load_client.py  new_generator.py  plt.py  python_client_test.py  statistic.py  test.py  test_be.py
src/ps/python_client/config/: config0.json  config1.json  config2.json  config3.json
src/storage/: CMakeLists.txt
src/storage/kv_engine/: CMakeLists.txt  base_kv.h  engine_double_desk.h  kv_engine_register.cc
src/storage/ssd/: spdk_wrapper.cc
